Clean up and removed deprecated URL